# DAVM

./: .gitignore  .gitmodules  CMakeLists.txt  README  clean_install.sh  execute_tests.sh  install.sh  regenerate_tests.sh
doc/: IR_definition.txt  changelog.txt  code_discussion.txt  debug.txt  roadmap.txt  tests_description.txt  todo.txt
doc/versions/: version_0_1.txt
src/doc/: InstructionCodification.txt
src/include/: BasicTypes.hpp  ByteCode.h  ByteCode.hpp  ErrorLog.h  ExecutionContext.h  ExecutionContext.hpp  IRBuilder.h  IRBuilder.hpp  IRCodification.h  IRCodification.hpp  IRDefinition.h  IRDefinition.hpp  Process.h  Process.hpp  RegisterBank.h  RegisterBank.hpp  Utils.hpp  VM.h  VM.hpp
src/lib/: ByteCode.cpp  CMakeLists.txt  ErrorLog.cpp  ExecutionContext.cpp  IRBuilder.cpp  IRCodification.cpp  Process.cpp  RegisterBank.cpp  Utils.cpp  VM.cpp  VM_instructions_implementation.cpp
src/tests/: CMakeLists.txt  main.cpp  test1.cpp  test2.cpp  test3.cpp
src/tests/verification/: CMakeLists.txt  test1.bc.out.ver  test1.ver  test2.bc.out.ver  test2.ver  test3.bc.out.ver  test3.ver  test4.bc.out.ver  test_bc1.ver  test_bc2.ver
